syntax = "proto3";
package minkv;
// import "google/protobuf/empty.proto";

service Store {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Set(SetRequest) returns (SetResponse);
    // rpc Set(SetRequest) returns (google.protobuf.Empty);
    rpc Del(DelRequest) returns (DelResponse);
    rpc Exists(ExistsRequest) returns (ExistsResponse);
    rpc GetSet(GetSetRequest) returns (GetSetResponse);
    rpc MSet(MSetRequest) returns (MSetResponse);
    rpc MGet(MGetRequest) returns (MGetResponse);
}

// get
message GetRequest {
    string key = 1;
}
message GetResponse {
    string value = 1;
}

// set
message SetRequest {
    string key = 1;
    string value = 2;
}
message SetResponse {
}

// del
message DelRequest {
    repeated string keys = 1;
}
message DelResponse {
    int32 num = 1;
}

// exists
message ExistsRequest {
    repeated string keys = 1;
}
message ExistsResponse {
    int32 result = 1;
}

// GetSet
message GetSetRequest {
    string key = 1;
    string value = 2;
}
message GetSetResponse {
    string result = 1;
}

// MSetRequest
message Item {
    string key = 1;
    string value = 2;
}
message MSetRequest{
    repeated Item items = 1;
}
message MSetResponse {}

// MGet
message MGetRequest{
   repeated string keys = 1;
}
message MGetResponse {
    repeated Item items = 1;
}
